<?xml version="1.0"?>
<package format="2">
  <name>image_utils</name>
  <version>0.0.0</version>
  <description>The image_utils package</description>

  <maintainer email="mitsudome-r@todo.todo">mitsudome-r</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>

</package>
